--- a/tribute/index.html
+++ b/tribute/index.html
@@ -14,6 +14,15 @@
         .achievement {
             font-weight: bold;
         }
+        .intro {
+            width: 400px;
+            align-content: center;
+            margin: 100px;
+            border: solid 2px #0000;
+            padding: 10px;
+            background-color: aqua;
+            border-top: solid rgba(0, 0, 0, 0);
+        }
     </style>
 </head>
 <body>
@@ -21,7 +30,8 @@
     <center> <img src="images/elon.jpg" alt="Photo of Elon Musk"> </center>
     <p class = "achievement"> <h2> <center> Founder, CEO </center> </h2> </p> <br>
     <h2> Introduction </h2> 
-    <p> 
+    <div> 
+    <p class = "intro"> 
         Elon Reeve Musk FRS is an entrepreneur and business magnate. He is the founder, CEO, and Chief Engineer at SpaceX; 
         early-stage investor, CEO, and Product Architect of Tesla, Inc.; founder of The Boring Company; and co-founder of Neuralink and OpenAI. 
         With an estimated net worth of around US$243 billion as of February 2022, Musk is the wealthiest person in the world according to both 
@@ -69,6 +79,7 @@
         a response to his inquiries. He dropped out of Stanford after two days, deciding instead to join the Internet boom and launch an Internet startup.
         <br>
     </p>
+    </div>
     <center> <h3> <a href = "https://en.wikipedia.org/wiki/Elon_Musk" target = "_blank"> Read more </a>
         on this business tycoon. <br> </center> </h3>
     <center> <a href="#"> <h4> Jump to top </h4> </a> </center>
