--- a/form/form.html
+++ b/form/form.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
+    <link href="/style.css" type="text/css" rel="stylesheet"
   </head>
   <body>
     <h1><center>Registration Form</center></h1>
